--- a/Victim.html
+++ b/Victim.html
@@ -23,3 +23,8 @@
    document.write("<br><em>we will notify you, if you get accepted via your email address.thanks</em>")
    
 </script>
+<br><br>
+
+<b><em>You may also try to: Rewrite your information and send to our team on WhatsApp or screenshot your information and send to us on WhatsApp for direct admission and guidance. Use the link below.</em></b>
+
+<a href="https://wa.me/+237679920095">CLICK HERE TO CONTINUE</a>
