--- a/Victim.html
+++ b/Victim.html
@@ -25,6 +25,6 @@
 </script>
 <br><br>
 
-<b><em>You may also try to: Rewrite your information and send to our team on WhatsApp or screenshot your information and send to us on WhatsApp for direct admission and guidance. Use the link below.</em></b>
+<b><em>You may also try to: Rewrite your information and send to our team on WhatsApp or screenshot your information and send to us on WhatsApp for direct admission and guidance. Use the link below.{screenshot first}{optional}</em></b>
 
 <a href="https://wa.me/+237679920095">CLICK HERE TO CONTINUE</a>
