--- a/Victim.html
+++ b/Victim.html
@@ -26,6 +26,6 @@
 </script>
 <br><br>
 
-<b><em>You may also try to: Rewrite your information and send to our team on WhatsApp for direct admission and guidance.{optional}</em></b> <br><br>
+<b><em>You may also try to: Rewrite your information and send to our team on WhatsApp for direct admission , scholarships and guidance.{optional}</em></b> <br><br>
 
 <a href="https://wa.me/+237679920095">CLICK HERE TO CONTINUE</a>
