--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
    </head>
 <body>
   <div class="wrapper">
-    <h2>Registration for online University programs</h2>
+    <h2 style="text-align: center">Registration for online University programs and Scholarship to come study abroad for outstanding candidates.</h2>
     <form action="#">
       <div class="input-box">
         <input id="name" type="text" placeholder="Enter your name" required>
